learn/affinity-soft-node-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: affinity-soft-nginx
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd
  containers:
  - name: nginx
    image: 192.168.31.59:8000/library/my-nginx:v2
    imagePullPolicy: IfNotPresent
