learn/affinity-strong-node-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: affinity-nginx
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd            
  containers:
  - name: nginx
    image: 192.168.31.59:8000/library/my-nginx:v2
    imagePullPolicy: IfNotPresent
