learn/affinity-strong-pod-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: security
            operator: In
            values:
            - S1
              #        topologyKey: topology.kubernetes.io/zone
        topologyKey: kubernetes.io/hostname
#    podAntiAffinity:
#      preferredDuringSchedulingIgnoredDuringExecution:
#      - weight: 100
#        podAffinityTerm:
#          labelSelector:
#            matchExpressions:
#            - key: security
#              operator: In
#              values:
#              - S2
#          topologyKey: topology.kubernetes.io/zone
  containers:
  - name: with-pod-affinity
    image: 192.168.31.59:8000/library/my-nginx:v2
