learn/empty-dir-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: empty-dir-pod
spec:
  containers:
  - name: my-nginx
    image: 192.168.31.59:8000/library/my-nginx:v2
    volumeMounts:
    - name: cache
      mountPath: "/cache"
  volumes:
  - name: cache
    emptyDir: {}
