learn/my-config-map-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-configmap-demo-pod
spec:
  containers:
    - name: demo
      image: 192.168.31.59:8000/library/my-nginx:v2
      command: ["sleep", "3600"]
      volumeMounts:
      - name: config
        mountPath: "/config"
        readOnly: true
  volumes:
    # 你可以在 Pod 级别设置卷，然后将其挂载到 Pod 内的容器中
    - name: config
      configMap:
        # 提供你想要挂载的 ConfigMap 的名字
        name: my-game-demo
        # 来自 ConfigMap 的一组键，将被创建为文件
        items:
        - key: "game.properties"
          path: "game.properties"
        - key: "user-interface.properties"
          path: "user-interface.properties"
