learn/my-secret-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod-env
spec:
  containers:
    - name: test-container
      image: 192.168.31.59:8000/library/my-nginx:v2
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
