learn/my-secret-pod-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod-volume
spec:
  containers:
  - name: my-nginx
    image: 192.168.31.59:8000/library/my-nginx:v2
    volumeMounts:
    - name: foo
      mountPath: "/etc/foo"
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: my-secret
      optional: false # 默认设置，意味着 "mysecret" 必须已经存在
