learn/hostpath-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: my-nginx
    image: 192.168.31.59:8000/library/my-nginx:v2
    volumeMounts:
    - name: cache
      mountPath: "/usr/share/nginx/html"
  volumes:
  - name: cache
    hostPath:
      path: /home/ubuntu/k8s/learn/nginx_html
            #path: /home/ubuntu/nginx_html
      type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: hostpath-pod-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: hostpath-pod-service-port-01
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
