learn/ingress-demo-3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www.test-1.com
  annotations: 
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
